examples/good/04-Prints.tms
void main() {

  printInt(1);
  printBool(true);
  printString("x");

  return;
}