examples/bad/04-WrongPrintType.tms
void main () {

  string x = "not ok";
  printInt(x);
  
  return;
}